2.configMap.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hotelapi-config-map-pod
  namespace: homeinns-pms
spec:
  containers:
    - name: hotelapi
      image: alpine
      command: ["sleep", "3600"]
      volumeMounts:
      - name: config
        mountPath: "/config"
        readOnly: true
  volumes:
    # 你可以在 Pod 级别设置卷，然后将其挂载到 Pod 内的容器中
    - name: config
      configMap:
        # 提供你想要挂载的 ConfigMap 的名字
        name: hotelapi-config-map
        # 来自 ConfigMap 的一组键，将被创建为文件
        items:
        - key: "custom.workerThreads"
          path: "custom.workerThreads.json"
        - key: "custom-interface.properties"
          path: "custom-interface.properties.json"
